crates/apex-parser/tests/snapshots/golden__expressions@02_ternary.cls.snap
---
source: crates/apex-parser/tests/golden.rs
expression: "snapshot_text(&src, &parse)"
input_file: tests/golden/expressions/02_ternary.cls
---
# source
a ? b : c ? d : e

# tree
ExprRoot@0..17
  TernaryExpr@0..17
    NameExpr@0..2
      Identifier@0..1 "a"
      Whitespace@1..2 " "
    Question@2..3 "?"
    Whitespace@3..4 " "
    NameExpr@4..6
      Identifier@4..5 "b"
      Whitespace@5..6 " "
    Colon@6..7 ":"
    Whitespace@7..8 " "
    TernaryExpr@8..17
      NameExpr@8..10
        Identifier@8..9 "c"
        Whitespace@9..10 " "
      Question@10..11 "?"
      Whitespace@11..12 " "
      NameExpr@12..14
        Identifier@12..13 "d"
        Whitespace@13..14 " "
      Colon@14..15 ":"
      Whitespace@15..16 " "
      NameExpr@16..17
        Identifier@16..17 "e"
