crates/apex-parser/tests/snapshots/golden__expressions@03_coalesce.cls.snap
---
source: crates/apex-parser/tests/golden.rs
expression: "snapshot_text(&src, &parse)"
input_file: tests/golden/expressions/03_coalesce.cls
---
# source
a ?? b ?? c

# tree
ExprRoot@0..11
  BinExpr@0..11
    BinExpr@0..7
      NameExpr@0..2
        Identifier@0..1 "a"
        Whitespace@1..2 " "
      Coal@2..4 "??"
      Whitespace@4..5 " "
      NameExpr@5..7
        Identifier@5..6 "b"
        Whitespace@6..7 " "
    Coal@7..9 "??"
    Whitespace@9..10 " "
    NameExpr@10..11
      Identifier@10..11 "c"
