crates/apex-parser/tests/snapshots/golden__expressions@06_equality.cls.snap
---
source: crates/apex-parser/tests/golden.rs
expression: "snapshot_text(&src, &parse)"
input_file: tests/golden/expressions/06_equality.cls
---
# source
a == b != c === d

# tree
ExprRoot@0..17
  BinExpr@0..17
    BinExpr@0..12
      BinExpr@0..7
        NameExpr@0..2
          Identifier@0..1 "a"
          Whitespace@1..2 " "
        Equal@2..4 "=="
        Whitespace@4..5 " "
        NameExpr@5..7
          Identifier@5..6 "b"
          Whitespace@6..7 " "
      NotEqual@7..9 "!="
      Whitespace@9..10 " "
      NameExpr@10..12
        Identifier@10..11 "c"
        Whitespace@11..12 " "
    TripleEqual@12..15 "==="
    Whitespace@15..16 " "
    NameExpr@16..17
      Identifier@16..17 "d"
