crates/apex-parser/tests/snapshots/golden__expressions@08_relational.cls.snap
---
source: crates/apex-parser/tests/golden.rs
expression: "snapshot_text(&src, &parse)"
input_file: tests/golden/expressions/08_relational.cls
---
# source
a <= b

# tree
ExprRoot@0..6
  BinExpr@0..6
    NameExpr@0..2
      Identifier@0..1 "a"
      Whitespace@1..2 " "
    Lt@2..3 "<"
    Assign@3..4 "="
    Whitespace@4..5 " "
    NameExpr@5..6
      Identifier@5..6 "b"
