crates/apex-parser/tests/snapshots/golden__expressions@09_shift_vs_relational.cls.snap
---
source: crates/apex-parser/tests/golden.rs
expression: "snapshot_text(&src, &parse)"
input_file: tests/golden/expressions/09_shift_vs_relational.cls
---
# source
a < b >> c

# tree
ExprRoot@0..10
  BinExpr@0..10
    NameExpr@0..2
      Identifier@0..1 "a"
      Whitespace@1..2 " "
    Lt@2..3 "<"
    Whitespace@3..4 " "
    BinExpr@4..10
      NameExpr@4..6
        Identifier@4..5 "b"
        Whitespace@5..6 " "
      Gt@6..7 ">"
      Gt@7..8 ">"
      Whitespace@8..9 " "
      NameExpr@9..10
        Identifier@9..10 "c"
