crates/apex-parser/tests/snapshots/golden__expressions@12_paren.cls.snap
---
source: crates/apex-parser/tests/golden.rs
expression: "snapshot_text(&src, &parse)"
input_file: tests/golden/expressions/12_paren.cls
---
# source
(a + b) * c

# tree
ExprRoot@0..11
  BinExpr@0..11
    ParenExpr@0..8
      LParen@0..1 "("
      BinExpr@1..6
        NameExpr@1..3
          Identifier@1..2 "a"
          Whitespace@2..3 " "
        Add@3..4 "+"
        Whitespace@4..5 " "
        NameExpr@5..6
          Identifier@5..6 "b"
      RParen@6..7 ")"
      Whitespace@7..8 " "
    Mul@8..9 "*"
    Whitespace@9..10 " "
    NameExpr@10..11
      Identifier@10..11 "c"
